--- a/css/components/_structure.scss
+++ b/css/components/_structure.scss
@@ -20,7 +20,7 @@ body {
     background: $white;
 }
 header, section, footer {
-    @extend .transition-fast;
+    @extend .transition;
     float: left;
     width: 100%;
 }
